--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 Othello.cbp
 *~
-bin/
+#/bin
+!/bin/Othello
 Othello.layout
 Othello.depend
-20151202155526
-math3d.h
-math3d.cpp
 Save
 Makefile.win
 *.swp
